hphp/hack/test/typecheck/is_expression/invalid_hint_generic.php
<?hh

function foo<T>(mixed $x): void {
  if ($x is T) {
    hh_show($x);
  }
}
